--- a/Resources/assets/scss/_tables.scss
+++ b/Resources/assets/scss/_tables.scss
@@ -23,6 +23,17 @@ table {
         }
       }
 
+      &[valign="top"] {
+        line-height: 40px;
+        vertical-align: top;
+
+        &.has-checkbox {
+          label:before {
+            top: 9px;
+          }
+        }
+      }
+
       i {
         &.fa-check {
           color: $jungle-green;
@@ -64,6 +75,70 @@ table {
             background-color: rgba(238, 238, 238, 0.8);
             border: 1px solid rgba(238, 238, 238, 1);
             width: calc(100% - 2px);
+          }
+        }
+      }
+
+      .inline-field {
+        position: relative;
+        display: block;
+        height: 40px;
+
+        &:not(:last-child) {
+          margin-bottom: 10px;
+        }
+
+        span {
+          position: relative;
+          float: left;
+          width: 40px;
+          height: 40px;
+          line-height: 40px;
+          font-weight: bold;
+          text-transform: uppercase;
+
+          &:last-of-type {
+            position: absolute;
+            right: 0;
+            top: 0;
+            text-align: right;
+            padding: 8px 8px 8px 0;
+            line-height: normal;
+
+            .btn {
+              opacity: 0;
+              background-color: $link-color;
+              color: #ffffff;
+              height: 24px;
+              width: 24px;
+              text-align: center;
+              line-height: 24px;
+              padding: 0 !important;
+              border-radius: 12px;
+              transition: opacity 0.2s ease;
+
+              .fa {
+                color: #ffffff;
+                display: inline;
+                font-size: 14px;
+              }
+            }
+          }
+        }
+
+        input {
+          position: relative;
+          float: left;
+          height: 40px !important;
+          width: calc(100% - 40px) !important;
+          margin: 0 !important;
+        }
+
+        &.focused {
+          span:last-of-type {
+            .btn {
+              opacity: 1;
+            }
           }
         }
       }
