--- a/Resources/views/translations/edit.html.twig
+++ b/Resources/views/translations/edit.html.twig
@@ -17,6 +17,15 @@
             </div>
 
             <div class="row">
+                <div class="col s12">
+                    {{ form_row(form.android) }}
+                </div>
+                <div class="col s12">
+                    {{ form_row(form.ios) }}
+                </div>
+            </div>
+
+            <div class="row">
                 <div class="col s12 m8">
                     <h3><span>/</span> {{ 'translations'|trans|capitalize }}</h3>
                 </div>
