--- a/Resources/assets/scss/translations/translations.scss
+++ b/Resources/assets/scss/translations/translations.scss
@@ -18,6 +18,68 @@ table {
           }
         }
       }
+
+      .inline-field {
+        position: relative;
+        display: block;
+        height: 40px;
+
+        &:not(:last-child) {
+          margin-bottom: 10px;
+        }
+
+        span {
+          position: relative;
+          float: left;
+          width: 40px;
+          height: 40px;
+          line-height: 33px;
+          font-weight: bold;
+          text-transform: uppercase;
+
+          &:nth-of-type(2) {
+            position: absolute;
+            right: 0;
+            top: 0;
+            text-align: right;
+            padding: 8px 8px 8px 0;
+            line-height: normal;
+
+            .btn {
+              opacity: 0;
+              color: #ffffff;
+              height: 24px;
+              width: 24px;
+              text-align: center;
+              line-height: 24px;
+              padding: 0 !important;
+              transition: opacity 0.2s ease;
+
+              .fa {
+                color: #ffffff;
+                display: inline;
+                font-size: 14px;
+              }
+            }
+          }
+        }
+
+        textarea {
+          position: relative;
+          float: left;
+          min-height: 40px !important;
+          width: calc(100% - 40px) !important;
+          margin: 0 !important;
+        }
+
+        &.focused {
+          span:nth-of-type(2) {
+            .btn {
+              opacity: 1;
+            }
+          }
+        }
+      }
     }
   }
 }
