--- a/Resources/public/css/translations/translations.css
+++ b/Resources/public/css/translations/translations.css
@@ -14,3 +14,62 @@ table tr td a.platform.active i.fa-apple {
   color: #666666;
 }
 
+table tr td .inline-field {
+  position: relative;
+  display: block;
+  height: 40px;
+}
+
+table tr td .inline-field:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+table tr td .inline-field span {
+  position: relative;
+  float: left;
+  width: 40px;
+  height: 40px;
+  line-height: 33px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+table tr td .inline-field span:nth-of-type(2) {
+  position: absolute;
+  right: 0;
+  top: 0;
+  text-align: right;
+  padding: 8px 8px 8px 0;
+  line-height: normal;
+}
+
+table tr td .inline-field span:nth-of-type(2) .btn {
+  opacity: 0;
+  color: #ffffff;
+  height: 24px;
+  width: 24px;
+  text-align: center;
+  line-height: 24px;
+  padding: 0 !important;
+  -webkit-transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease;
+}
+
+table tr td .inline-field span:nth-of-type(2) .btn .fa {
+  color: #ffffff;
+  display: inline;
+  font-size: 14px;
+}
+
+table tr td .inline-field textarea {
+  position: relative;
+  float: left;
+  min-height: 40px !important;
+  width: calc(100% - 40px) !important;
+  margin: 0 !important;
+}
+
+table tr td .inline-field.focused span:nth-of-type(2) .btn {
+  opacity: 1;
+}
+
