--- a/Resources/assets/scss/translations/translations.scss
+++ b/Resources/assets/scss/translations/translations.scss
@@ -1,21 +1,31 @@
 table {
   tr {
     td {
-      a.regular {
-        margin-right: 10px;
-      }
-
-      a.platform {
-        color: #cccccc;
-
-        &.active {
-          i.fa-android {
-            color: #A3C439;
+      &:nth-child(3) {
+        div:first-child {
+          a.regular {
+            margin-right: 10px;
           }
 
-          i.fa-apple {
-            color: #666666;
+          a.platform {
+            color: #cccccc;
+
+            &.active {
+              i.fa-android {
+                color: #A3C439;
+              }
+
+              i.fa-apple {
+                color: #666666;
+              }
+            }
           }
+        }
+
+        div:last-child {
+          line-height: 1.5rem;
+          font-size: 12px;
+          color: #a4a4a4;
         }
       }
 
