--- a/Resources/public/css/translations/translations.css
+++ b/Resources/public/css/translations/translations.css
@@ -1,17 +1,23 @@
-table tr td a.regular {
+table tr td:nth-child(3) div:first-child a.regular {
   margin-right: 10px;
 }
 
-table tr td a.platform {
+table tr td:nth-child(3) div:first-child a.platform {
   color: #cccccc;
 }
 
-table tr td a.platform.active i.fa-android {
+table tr td:nth-child(3) div:first-child a.platform.active i.fa-android {
   color: #A3C439;
 }
 
-table tr td a.platform.active i.fa-apple {
+table tr td:nth-child(3) div:first-child a.platform.active i.fa-apple {
   color: #666666;
+}
+
+table tr td:nth-child(3) div:last-child {
+  line-height: 1.5rem;
+  font-size: 12px;
+  color: #a4a4a4;
 }
 
 table tr td .inline-field {
