--- a/Resources/views/translations/edit.html.twig
+++ b/Resources/views/translations/edit.html.twig
@@ -18,6 +18,12 @@
 
             <div class="row">
                 <div class="col s12">
+                    {{ form_row(form.description) }}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s12">
                     {{ form_row(form.android) }}
                 </div>
                 <div class="col s12">
