--- a/Resources/views/translations/upload.html.twig
+++ b/Resources/views/translations/upload.html.twig
@@ -24,6 +24,24 @@
             </div>
 
             <div class="row">
+                <div class="col s6">
+                    {{ form_row(form.language) }}
+                </div>
+                <div class="col s6">
+                    {{ form_row(form.type) }}
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s12">
+                    {{ form_row(form.android) }}
+                </div>
+                <div class="col s12">
+                    {{ form_row(form.ios) }}
+                </div>
+            </div>
+
+            <div class="row">
                 <div class="col s12">
                     <button type="submit" class="btn btn-primary" formnovalidate>{{ 'translation.upload'|trans }}</button>
                 </div>
