--- a/Resources/assets/scss/translations/translations.scss
+++ b/Resources/assets/scss/translations/translations.scss
@@ -1,7 +1,7 @@
 table {
   tr {
     td {
-      &:nth-child(3) {
+      &:nth-child(2) {
         div:first-child {
           a.regular {
             margin-right: 10px;
@@ -32,7 +32,8 @@ table {
       .inline-field {
         position: relative;
         display: block;
-        height: 40px;
+        min-height: 40px;
+        overflow-y: auto;
 
         &:not(:last-child) {
           margin-bottom: 10px;
@@ -74,7 +75,7 @@ table {
           }
         }
 
-        textarea {
+        div[contenteditable] {
           position: relative;
           float: left;
           min-height: 40px !important;
