--- a/Resources/public/css/translations/translations.css
+++ b/Resources/public/css/translations/translations.css
@@ -1,20 +1,20 @@
-table tr td:nth-child(3) div:first-child a.regular {
+table tr td:nth-child(2) div:first-child a.regular {
   margin-right: 10px;
 }
 
-table tr td:nth-child(3) div:first-child a.platform {
+table tr td:nth-child(2) div:first-child a.platform {
   color: #cccccc;
 }
 
-table tr td:nth-child(3) div:first-child a.platform.active i.fa-android {
+table tr td:nth-child(2) div:first-child a.platform.active i.fa-android {
   color: #A3C439;
 }
 
-table tr td:nth-child(3) div:first-child a.platform.active i.fa-apple {
+table tr td:nth-child(2) div:first-child a.platform.active i.fa-apple {
   color: #666666;
 }
 
-table tr td:nth-child(3) div:last-child {
+table tr td:nth-child(2) div:last-child {
   line-height: 1.5rem;
   font-size: 12px;
   color: #a4a4a4;
@@ -23,7 +23,8 @@ table tr td:nth-child(3) div:last-child {
 table tr td .inline-field {
   position: relative;
   display: block;
-  height: 40px;
+  min-height: 40px;
+  overflow-y: auto;
 }
 
 table tr td .inline-field:not(:last-child) {
@@ -67,7 +68,7 @@ table tr td .inline-field span:nth-of-type(2) .btn .fa {
   font-size: 14px;
 }
 
-table tr td .inline-field textarea {
+table tr td .inline-field div[contenteditable] {
   position: relative;
   float: left;
   min-height: 40px !important;
