--- a/Resources/public/css/collections/collections.css
+++ b/Resources/public/css/collections/collections.css
@@ -1,17 +1,1 @@
-.col.collection-card {
-  position: relative;
-}
-
-.col.collection-card .entry-settings {
-  position: absolute;
-  z-index: 1;
-  bottom: calc(1rem + 13px);
-  left: calc(0.75rem + 15px);
-}
-
-.col.collection-card .entry-settings a {
-  padding: 3px;
-  font-size: 22px;
-  color: #a4a4a4;
-}
-
+.col.collection-card{position:relative}.col.collection-card .entry-settings{position:absolute;z-index:1;bottom:calc(1rem + 13px);left:calc(.75rem + 15px)}.col.collection-card .entry-settings a{padding:3px;font-size:22px;color:#a4a4a4}
