--- a/Resources/assets/scss/_forms.scss
+++ b/Resources/assets/scss/_forms.scss
@@ -27,13 +27,12 @@ form {
     background-color: $checkbox-checked-color;
   }
 
-  input[type=text], input[type=number], input[type=search], input[type=url], input[type=password], input[type=email], textarea.materialize-textarea, div[contenteditable] {
+  input[type=text], input[type=number], input[type=search], input[type=url], input[type=password], input[type=email], textarea.materialize-textarea {
     &:not(.browser-default) {
       box-shadow: none !important;
       border: 1px solid #dae3e7 !important;
       border-radius: 5px !important;
       padding: 5px !important;
-      box-sizing: border-box !important;
       transition: background-color 0.2s ease, border-color 0.2s ease;
 
       &:not(.jscolor) {
@@ -62,6 +61,15 @@ form {
     }
   }
 
+  input[type=text], input[type=number], input[type=search], input[type=url], input[type=password], input[type=email] {
+    &:not(.browser-default) {
+      box-sizing: border-box !important;
+    }
+  }
+
+  textarea.materialize-textarea {
+    box-sizing: content-box !important;
+  }
 
   /**
   Materialize select overrides
@@ -74,7 +82,6 @@ form {
     }
   }
 
-
   /**
   SELECT 2 Styling overrides
    */
@@ -82,7 +89,7 @@ form {
     height: auto !important;
     background-color: #f7f9fa !important;
     box-shadow: none !important;
-    border:1px solid #dae3e7 !important;
+    border: 1px solid #dae3e7 !important;
     border-radius: 5px !important;
     padding: 5px !important;
     box-sizing: border-box !important;
