--- a/Resources/public/css/translations/translations.css
+++ b/Resources/public/css/translations/translations.css
@@ -1,82 +1,1 @@
-table tr td:nth-child(2) div:first-child a.regular {
-  margin-right: 10px;
-}
-
-table tr td:nth-child(2) div:first-child a.platform {
-  color: #cccccc;
-}
-
-table tr td:nth-child(2) div:first-child a.platform.active i.fa-android {
-  color: #A3C439;
-}
-
-table tr td:nth-child(2) div:first-child a.platform.active i.fa-apple {
-  color: #666666;
-}
-
-table tr td:nth-child(2) div:last-child {
-  line-height: 1.5rem;
-  font-size: 12px;
-  color: #a4a4a4;
-}
-
-table tr td .inline-field {
-  position: relative;
-  display: block;
-  min-height: 40px;
-  overflow-y: auto;
-}
-
-table tr td .inline-field:not(:last-child) {
-  margin-bottom: 10px;
-}
-
-table tr td .inline-field span {
-  position: relative;
-  float: left;
-  width: 40px;
-  height: 40px;
-  line-height: 33px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-table tr td .inline-field span:nth-of-type(2) {
-  position: absolute;
-  right: 0;
-  top: 0;
-  text-align: right;
-  padding: 8px 8px 8px 0;
-  line-height: normal;
-}
-
-table tr td .inline-field span:nth-of-type(2) .btn {
-  opacity: 0;
-  color: #ffffff;
-  height: 24px;
-  width: 24px;
-  text-align: center;
-  line-height: 24px;
-  padding: 0 !important;
-  -webkit-transition: opacity 0.2s ease;
-  transition: opacity 0.2s ease;
-}
-
-table tr td .inline-field span:nth-of-type(2) .btn .fa {
-  color: #ffffff;
-  display: inline;
-  font-size: 14px;
-}
-
-table tr td .inline-field div[contenteditable] {
-  position: relative;
-  float: left;
-  min-height: 40px !important;
-  width: calc(100% - 40px) !important;
-  margin: 0 !important;
-}
-
-table tr td .inline-field.focused span:nth-of-type(2) .btn {
-  opacity: 1;
-}
-
+table tr td:nth-child(2) div:first-child a.regular{margin-right:10px}table tr td:nth-child(2) div:first-child a.platform{color:#ccc}table tr td:nth-child(2) div:first-child a.platform.active i.fa-android{color:#a3c439}table tr td:nth-child(2) div:first-child a.platform.active i.fa-apple{color:#666}table tr td:nth-child(2) div:last-child{line-height:1.5rem;font-size:12px;color:#a4a4a4}table tr td .inline-field{position:relative;display:block;min-height:40px;overflow-y:auto}table tr td .inline-field:not(:last-child){margin-bottom:10px}table tr td .inline-field span{position:relative;float:left;width:40px;height:40px;line-height:33px;font-weight:700;text-transform:uppercase}table tr td .inline-field span:nth-of-type(2){position:absolute;right:0;top:0;text-align:right;padding:8px 8px 8px 0;line-height:normal}table tr td .inline-field span:nth-of-type(2) .btn{opacity:0;color:#fff;height:24px;width:24px;text-align:center;line-height:24px;padding:0!important;transition:opacity .2s ease}table tr td .inline-field span:nth-of-type(2) .btn .fa{color:#fff;display:inline;font-size:14px}table tr td .inline-field textarea{position:relative;float:left;min-height:40px!important;width:calc(100% - 52px)!important;margin:0!important}table tr td .inline-field.focused span:nth-of-type(2) .btn{opacity:1}
