Using a url for store hosted apps / file download url for in house distributed apps

--- a/Resources/views/versions/edit.html.twig
+++ b/Resources/views/versions/edit.html.twig
@@ -29,6 +29,8 @@
                             'label': 'app_version.description_label'|trans({'%lang%': description.vars.name|upper}),
                         }) }}
 
+                        {{ form_errors(description) }}
+
                         {{ form_widget(description) }}
                     </div>
                 </div>
