--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -83,7 +83,7 @@
                 {% endif %}
 
                 {% if pronto_mobile.pluginIsActive('app_versions') %}
-                    <li><a href="{{ path('pronto_mobile_app_versions') }}" {% if pronto_mobile.activeModule == 'app_versions' %}class="active"{% endif %}><span><i class="fa fa-code-fork fa-lg" aria-hidden="true"></i></span><span>{{ 'app_versions'|trans|capitalize }}</span></a></li>
+                    <li><a href="{{ path('pronto_mobile_app_versions') }}" {% if pronto_mobile.activeModule == 'versions/app' %}class="active"{% endif %}><span><i class="fa fa-code-fork fa-lg" aria-hidden="true"></i></span><span>{{ 'app_versions'|trans|capitalize }}</span></a></li>
                 {% endif %}
 
                 {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_SUPER_ADMIN') %}
