Bugfixing and testing

--- a/Resources/views/mails/users/app/password.html.twig
+++ b/Resources/views/mails/users/app/password.html.twig
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block content %}
-    {{ 'mails.app.password.body'|trans({'%application%': application.name}) }}
+    {{ 'mails.app.password.body'|trans({'%application%': application.name})|raw }}
 {% endblock %}
 
 {% block salutation %}
-    {{ 'mails.base.custom_salutation'|trans({'%company%': customer.companyName}) }}
+    {{ 'mails.base.custom_salutation'|trans({'%company%': customer.companyName})|raw }}
 {% endblock %}
