--- a/Resources/assets/scss/translations/translations.scss
+++ b/Resources/assets/scss/translations/translations.scss
@@ -81,6 +81,10 @@ table {
           min-height: 20px !important;
           width: calc(100% - 52px) !important;
           margin: 0 !important;
+
+          &.materialize-textarea:not(:focus) {
+            height: 20px !important;
+          }
         }
 
         &.focused {
