Exporting translations as CSV

--- a/Resources/views/translations/index.html.twig
+++ b/Resources/views/translations/index.html.twig
@@ -17,6 +17,10 @@
                 path: path('pronto_mobile_translations_upload'),
                 color: 'blue-grey lighten-3',
                 icon: 'upload'
+            }, {
+                path: path('pronto_mobile_translations_export'),
+                color: 'blue-grey lighten-3',
+                icon: 'download'
             }
         ]
     } %}
