--- a/Resources/views/collections/properties/edit.html.twig
+++ b/Resources/views/collections/properties/edit.html.twig
@@ -33,7 +33,7 @@
             </div>
 
             {% for type in types %}
-                <div class="type-config" id="type-{{ type.id }}">
+                <div class="type-config type-{{ type.type }}">
                     {% for config in type.config %}
                         {% if config.configurable is not defined or (config.configurable is defined and config.configurable == true) %}
                             <div class="row">
@@ -67,6 +67,17 @@
             <div class="row">
                 <div class="col s12">
                     {{ form_row(propertyForm.includeInJsonListView, {
+                        attr: {
+                            disabled: property != null and property.entryTitle,
+                            class: property != null and property.entryTitle ? 'filled-in' : ''
+                        }
+                    }) }}
+                </div>
+            </div>
+
+            <div class="row type-config type-config-translatable">
+                <div class="col s12">
+                    {{ form_row(propertyForm.translatable, {
                         attr: {
                             disabled: property != null and property.entryTitle,
                             class: property != null and property.entryTitle ? 'filled-in' : ''
